--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "approximate-number": "^2.0.0",
     "hh-mm-ss": "^1.2.0",
     "next": "10.2.0",
+    "nprogress": "^0.2.0",
     "query-string": "^7.0.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
